feat: migrate to PG/Kafka, async seckill path, connector, JDK25 runtime tuning
Align the stack with PostgreSQL + Kafka, move seckill hot path to Lua+Kafka async fulfill, add ecommerce connector bypass, and tune JDK25 (VT, ScopedValue, ZGC/CompactHeaders, bounded Kafka/Redis timeouts).

Co-authored-by: Cursor <cursoragent@cursor.com>